🐛 Fix navbar title that not centered

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -5,7 +5,6 @@
   &__title {
     position: relative;
     font-family: 'Pokemon Solid', 'Open Sans', sans-serif;
-    color: $color-light !important;
     letter-spacing: 0.1em;
   }
 
